test/Fail/Issue5341.err
Issue5341.agda:5.30-31: error: [VariableIsErased]
Variable A is declared erased, so it cannot be used here
when checking that the expression A has type Set
